syntax = "proto3";

package auth;

option go_package = "services/";


// SIGNIN
message SignInRequest {
  string email = 1;
  string password = 2;
}

message SignInResponse {
  string access_token = 1;
}
 